--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="shortcut icon" type="image/x-icon" href="/media/logo.png" />
   <link rel="stylesheet" href="style.css">
   <meta name="google-site-verification" content="OCDxLAjXHmBCOv1OmZ9OsZRo6PXNpotlVNy9vA8x2hA" />
-  <meta name="description" content="Hey! My name is trikrapka, also known as KrapkaSoft. It is my website" />
+  <meta name="description" content="It is the official website of KrapkaSoft gamedev indie team" />
+  <meta name="title" content="KrapkaSoft" />
   <title>KrapkaSoft</title>
 </head>
 <header>
@@ -93,7 +94,7 @@
   </div>
   <div class="reveal">
     <h1>Flami</h1>
-    <p>coming soon to pc</p>
+    <p>coming soon to pc & ps5</p>
     <img id="lc2pic" src="../media/pic3.png"></img>
   </div>
 </section>
@@ -102,9 +103,9 @@
     <h2>Follow us on</h2>
     <button class="button-80" role="button"
       onclick="window.location.href='https://twitter.com/trikrapka';">Twitter</button>
-    <button class="button-80" role="button" onclick="window.location.href='https://t.me/psynggga';">Telegeram</button>
+    <button class="button-80" role="button" onclick="window.location.href='https://t.me/+LYgDOZTgoN5jZGJi';">Telegeram</button>
     <button class="button-80" role="button"
-      onclick="window.location.href='https://github.com/trikrapka';">GitHub</button>
+      onclick="window.location.href='https://github.com/KrapkaSoft/';">GitHub</button>
   </div>
 </section>
 <section id="footer">
