--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
   <div class="reveal">
     <h1>Flami</h1>
-    <p>coming soon to pc & ps5</p>
+    <p>coming soon to pc / ps5</p>
     <img id="lc2pic" src="../media/pic3.png"></img>
   </div>
 </section>
