--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <link rel="shortcut icon" type="image/x-icon" href="/media/logo.png" />
   <link rel="stylesheet" href="style.css">
-  <meta name="google-site-verification" content="OCDxLAjXHmBCOv1OmZ9OsZRo6PXNpotlVNy9vA8x2hA" />
-  <meta name="description" content="It is the official website of KrapkaSoft gamedev indie team" />
-  <meta name="title" content="KrapkaSoft" />
+  <meta name="title" content="KrapkaSoft official website">
+  <meta name="description"
+    content="Hey! Welcome to the official KrapkaSoft website! Here you can look through our projects, contact us, and other. Enjoy :]" />
   <title>KrapkaSoft</title>
 </head>
 <header>
@@ -20,25 +20,16 @@
       <ul>
         <li><a href="#features">our Games</a></li>
         <li><a href="#cta">socials</a></li>
-        <li><a href="mailto:leapingcatgame@gmail.com?" style="    
-          background-color: rgba(255, 49, 49, 0.722);
-          color: #fff;
-          text-decoration: none;
-          font-size: 18px;
-          padding: 10px;
-          border-radius: 10px;
-          transition: all 0.3s ease; ">contact us</a></li>
+        <li><b href="mailto:support@krapkasoft.space?">contact us</b></li>
       </ul>
 
     </nav>
   </div>
 </header>
 <div class="animationLoader">
-  <div class="container">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
+  <div class="animationLoader__row">
+    <div class="animationLoader__item"></div>
+    <div class="animationLoader__item"></div>
   </div>
 </div>
 <section id="hero">
@@ -55,7 +46,7 @@
 <section id="features">
   <div class="reveal">
     <div class="overlay">
-      <h2>our projects</h2>
+      <h2>check out out projects</h2>
     </div>
   </div>
   <div class="reveal">
@@ -94,7 +85,7 @@
   </div>
   <div class="reveal">
     <h1>Flami</h1>
-    <p>coming soon to pc / ps5</p>
+    <p>coming soon to pc</p>
     <img id="lc2pic" src="../media/pic3.png"></img>
   </div>
 </section>
@@ -103,9 +94,9 @@
     <h2>Follow us on</h2>
     <button class="button-80" role="button"
       onclick="window.location.href='https://twitter.com/trikrapka';">Twitter</button>
-    <button class="button-80" role="button" onclick="window.location.href='https://t.me/+LYgDOZTgoN5jZGJi';">Telegeram</button>
+    <button class="button-80" role="button" onclick="window.location.href='https://t.me/psynggga';">Telegeram</button>
     <button class="button-80" role="button"
-      onclick="window.location.href='https://github.com/KrapkaSoft/';">GitHub</button>
+      onclick="window.location.href='https://github.com/trikrapka';">GitHub</button>
   </div>
 </section>
 <section id="footer">
