--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
       <ul>
         <li><a href="#features">our Games</a></li>
         <li><a href="#cta">socials</a></li>
-        <li><b href="mailto:support@krapkasoft.space?">contact us</b></li>
+        <li><a href="mailto:support@krapkasoft.space" style="    
+          background-color: rgba(255, 49, 49, 0.722);
+          color: #fff;
+          text-decoration: none;
+          font-size: 18px;
+          padding: 10px;
+          border-radius: 10px;
+          transition: all 0.3s ease; ">contact us</a></li>
       </ul>
-
     </nav>
   </div>
 </header>
