--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       onclick="window.location.href='https://twitter.com/trikrapka';">Twitter</button>
     <button class="button-80" role="button" onclick="window.location.href='https://t.me/psynggga';">Telegeram</button>
     <button class="button-80" role="button"
-      onclick="window.location.href='https://github.com/trikrapka';">GitHub</button>
+      onclick="window.location.href='https://github.com/KrapkaSoft';">GitHub</button>
   </div>
 </section>
 <section id="footer">
