--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="#features">our Games</a></li>
         <li><a href="#cta">socials</a></li>
-        <li><a href="mailto:support@krapkasoft.space" style="    
+        <li><a href="mailto:leapingcatgame@gmail.com" style="    
           background-color: rgba(255, 49, 49, 0.722);
           color: #fff;
           text-decoration: none;
@@ -52,7 +52,7 @@
 <section id="features">
   <div class="reveal">
     <div class="overlay">
-      <h2>check out out projects</h2>
+      <h2>our projects</h2>
     </div>
   </div>
   <div class="reveal">
