Some changes and a little of mobile adaptation

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#features" ;">our Games</a></li>
-        <li><a href="#cta">socials</a></li>
+        <li><a href="404.html" ;">news</a></li>
+        <li><a href="404.html" ;">team</a></li>
+        <li><a href="404.html" ;">socials</a></li>
         <li><a href="mailto:support@krapkasoft.space" style="    
           background-color: rgba(255, 49, 49, 0.722);
           color: #fff;
@@ -50,8 +51,8 @@
     <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
       <div class="hidden sm:mb-8 sm:flex sm:justify-center">
         <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-300 ring-1 ring-indigo hover:ring-/20">
-          New game just got announced <a href="#" class="font-semibold text-indigo-600"><span class="absolute inset-0"
-              aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+          New game just got announced <a href="#video" class="font-semibold text-indigo-600"><span
+              class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
         </div>
       </div>
       <div class="text-center">
@@ -72,7 +73,8 @@
 </div>
 <div class="reveal">
   <div class="overlay">
-    <h2 class="text-4xl tracking-tight text-white sm:text-7xl mx-auto" style="margin-top: 400px; margin-bottom: 500px;">our products</h2>
+    <h2 class="text-4xl tracking-tight text-white sm:text-7xl mx-auto" style="margin-top: 400px; margin-bottom: 500px;">
+      our products</h2>
   </div>
 </div>
 <div class="reveal">
@@ -116,12 +118,12 @@
   </div>
 </div>
 <div class="reveal">
-      <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
-      <div
-        class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
-        style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
-      </div>
+  <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
+    <div
+      class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
+      style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
     </div>
+  </div>
   <div class="divbutton">
     <button class="button-79" role="button"
       onclick="window.location.href='https://play.google.com/store/apps/details?id=com.leapingcat';">
@@ -130,16 +132,23 @@
   </div>
 </div>
 <div class="reveal">
-  <h1 class="relative tracking-tight text-white sm:text-8xl text-center"
-    style="margin-top: 500px; color : orange; text-shadow: orangered 0px 0px 15px; animation: blink 3s infinite;">Flami</h1>
-  <p class="mt-6 text-lg leading-8 text-gray-200 text-center">coming soon to pc</p>
-  <video style="video {
+  <div id="video">
+    <h1 class="relative tracking-tight text-white sm:text-8xl text-center"
+      style="margin-top: 500px; color : orange; text-shadow: orangered 0px 0px 15px; animation: blink 3s infinite;">
+      Flami
+    </h1>
+    <p class="mt-6 text-lg leading-8 text-gray-200 text-center">coming soon to pc and ps 5</p>
+    <div class="reveal">
+      <video style="video {
     display: block;
     margin: auto;
-  }"  src="/media/flami.mov" height="100" autoplay loop muted></video>
+  }" src="/media/flami.mov" height="100" autoplay loop muted></video>
+    </div>
+  </div>
 </div>
+
 <section id="footer">
-  <p style="margin-top: 600px;">&copy; 2023 KrapkaSoft</p>
+  <p style="">&copy; 2023 KrapkaSoft</p>
 </section>
 </body>
 
