Additional changes. Kind-of mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="buttons.scss">
   <script src="script.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <link rel="shortcut icon" type="image/x-icon" href="/media/logo.png" />
@@ -22,14 +23,7 @@
         <li><a href="404.html" ;">news</a></li>
         <li><a href="404.html" ;">team</a></li>
         <li><a href="404.html" ;">socials</a></li>
-        <li><a href="mailto:support@krapkasoft.space" style="    
-          background-color: rgba(255, 49, 49, 0.722);
-          color: #fff;
-          text-decoration: none;
-          font-size: 18px;
-          padding: 10px;
-          border-radius: 10px;
-          transition: all 0.3s ease; ">contact us</a></li>
+        <li><a href="mailto:leapingcatgame@gmail.com">contact us</a></li>
       </ul>
     </nav>
   </div>
@@ -73,12 +67,12 @@
 </div>
 <div class="reveal">
   <div class="overlay">
-    <h2 class="text-4xl tracking-tight text-white sm:text-7xl mx-auto" style="margin-top: 400px; margin-bottom: 500px;">
+    <h2 class="text-4xl tracking-tight text-white sm:text-7xl mx-auto" style="margin-top: 400px; margin-bottom: 200px;">
       our products</h2>
   </div>
 </div>
 <div class="reveal">
-  <iframe style="  float: right; margin-right: 60px;" width="960" height="540"
+  <iframe style="float: right; margin-right: 50px; " width="60%" height="500"
     src="https://www.youtube.com/embed/33fP-hAH6iM" title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen></iframe>
@@ -89,31 +83,24 @@
         style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
       </div>
     </div>
-    <img src="/media/axer.png" style="float: left; height: 540px; margin-top: 100px; transform: scale(-1,1);"
-      alt="axer">
+    <img src="/media/axer.png" style="float: left; height: auto; max-width: 25%; transform: scale(-1,1);" alt="axer">
   </div>
 </div>
 <div class="reveal">
   <div class="divbutton">
-    <button class="button-78" role="button"
+    <button role="button"
       onclick="window.location.href='https://play.google.com/store/apps/details?id=com.krapkasoft.leapingcatsm';">
       Leaping Cat 2 - Smooth Dark on Google Play
     </button>
   </div>
 </div>
 <div class="reveal">
-  <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
-    <div
-      class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
-      style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
-    </div>
-  </div>
-  <iframe style="float: left; margin-right: 20px; margin-top: 500px;" width="960" height="540"
+  <iframe style="float: left; margin-left: 50px; margin-top: 500px;" width="60%" height="500"
     src="https://www.youtube.com/embed/yFN0cLgM_Rk?controls=0" title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen></iframe>
   <div class="reveal">
-    <img src="/media/mike.gif" style="float: right; height: 540px; margin-top: 500px; transform: scale(-1,1);"
+    <img src="/media/mike.gif" style="float: right; height: 540px; margin-top: 400px; transform: scale(-1,1);"
       alt="axer">
   </div>
 </div>
@@ -125,7 +112,7 @@
     </div>
   </div>
   <div class="divbutton">
-    <button class="button-79" role="button"
+    <button role="button"
       onclick="window.location.href='https://play.google.com/store/apps/details?id=com.leapingcat';">
       Leaping Cat on Google Play
     </button>
@@ -148,8 +135,22 @@
 </div>
 
 <section id="footer">
-  <p style="">&copy; 2023 KrapkaSoft</p>
+  <div class="logo-garden ">
+    <img alt="UE" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
+    class="pc" style="width: 100px; float: left; margin-right: 10px;" src="media/UE_Logo_stacked_unreal-engine_white.svg">
+    <img alt="Unity" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
+    class="pc" style="width: 200px; float: left; margin-right: 10px;" src="media/U_Logo_White_RGB.svg">
+    <img alt="PC" class="pc" style="width: 50px; float: left; margin-right: 50px;"
+      src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg">
+  </div>
 </section>
+<div class="legal">
+  <p>
+    Leaping Cat, Leaping Cat 2 : Smooth Dark and Flami software © 2023 KrapkaSoft. Leaping Cat, Leaping Cat 2 : Smooth
+    Dark and Flami
+    characters, names and related indicia © and ™ KrapkaSoft. All Rights Reserved.
+  </p>
+</div>
 </body>
 
 </html>
