Fixed footer on mobile

--- a/index.html
+++ b/index.html
@@ -120,16 +120,15 @@
 </div>
 <div class="reveal">
   <div id="video">
-    <h1 class="relative tracking-tight text-white sm:text-8xl text-center"
-      style="margin-top: 500px; color : orange; text-shadow: orangered 0px 0px 15px; animation: blink 3s infinite;">
+    <h1 class="relative tracking-tight text-white text-center"
+      style="font-size: 60px;  margin-top: 500px; color : orange; text-shadow: orangered 0px 0px 15px; animation: blink 3s infinite;">
       Flami
     </h1>
     <p class="mt-6 text-lg leading-8 text-gray-200 text-center">coming soon to pc and ps 5</p>
     <div class="reveal">
-      <video style="video {
+      <video style="
     display: block;
-    margin: auto;
-  }" src="/media/flami.mov" height="100" autoplay loop muted></video>
+    margin: auto; " src="/media/flami.mov" height="100" width="auto" autoplay loop muted></video>
     </div>
   </div>
 </div>
@@ -137,11 +136,10 @@
 <section id="footer">
   <div class="logo-garden ">
     <img alt="UE" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
-    class="pc" style="width: 100px; float: left; margin-right: 10px;" src="media/UE_Logo_stacked_unreal-engine_white.svg">
+    class="ueimg" src="media/UE_Logo_stacked_unreal-engine_white.svg">
     <img alt="Unity" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
-    class="pc" style="width: 200px; float: left; margin-right: 10px;" src="media/U_Logo_White_RGB.svg">
-    <img alt="PC" class="pc" style="width: 50px; float: left; margin-right: 50px;"
-      src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg">
+    class="unityimg" src="media/U_Logo_White_RGB.svg">
+    <img alt="PC" class="pc"src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg">
   </div>
 </section>
 <div class="legal">
