--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Hey! Welcome to the official KrapkaSoft website! Here you can look through our projects, contact us, and other. Enjoy :]" />
+  <meta property="og:site_name" content="KrapkaSoft">
+  <meta property="og:title" content="KrapkaSoft">
   <title>KrapkaSoft</title>
 </head>
+
 <header>
   <div class="navbar">
     <div class="logo">
@@ -28,12 +31,7 @@
     </nav>
   </div>
 </header>
-<div class="animationLoader">
-  <div class="animationLoader__row">
-    <div class="animationLoader__item"></div>
-    <div class="animationLoader__item"></div>
-  </div>
-</div>
+
 <div class="bg-gradient-to-tr from-[#303030] to-[#303030]">
   <div class="relative isolate px-6 pt-14 lg:px-8">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
@@ -136,12 +134,13 @@
 <section id="footer">
   <div class="logo-garden ">
     <img alt="UE" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
-    class="ueimg" src="media/UE_Logo_stacked_unreal-engine_white.svg">
+      class="ueimg" src="media/UE_Logo_stacked_unreal-engine_white.svg">
     <img alt="Unity" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
-    class="unityimg" src="media/U_Logo_White_RGB.svg">
-    <img alt="PC" class="pc"src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg">
+      class="unityimg" src="media/U_Logo_White_RGB.svg">
+    <img alt="PC" class="pc" src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg">
   </div>
 </section>
+
 <div class="legal">
   <p>
     Leaping Cat, Leaping Cat 2 : Smooth Dark and Flami software © 2023 KrapkaSoft. Leaping Cat, Leaping Cat 2 : Smooth
