Page loader added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
   </div>
 </header>
 
+<body>
+  <div class="loader-wrapper">
+    <div class="ring">
+        <svg viewBox="25 25 50 50">
+            <circle cx="50" cy="50" r="20"></circle>
+        </svg>
+    </div>
+</div>
+<script src="loader.js"></script>
 <div class="bg-gradient-to-tr from-[#303030] to-[#303030]">
   <div class="relative isolate px-6 pt-14 lg:px-8">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
