--- a/index.html
+++ b/index.html
@@ -79,10 +79,14 @@
   </div>
 </div>
 <div class="reveal">
+  <div class="axerimg">
+    <img src="/media/axer.png" style="" alt="axer">
+    </div>
   <iframe style="float: right; margin-right: 50px; " width="60%" height="500"
     src="https://www.youtube.com/embed/33fP-hAH6iM" title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen></iframe>
+    allowfullscreen>
+  </iframe>
   <div class="reveal">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
       <div
@@ -90,7 +94,6 @@
         style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
       </div>
     </div>
-    <img src="/media/axer.png" style="float: left; height: auto; max-width: 25%; transform: scale(-1,1);" alt="axer">
   </div>
 </div>
 <div class="reveal">
