--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html>
 
 <head>
+  <title>KrapkaSoft: Indie Development Studio</title>
+
   <link rel="stylesheet" href="buttons.scss">
   <script src="script.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <link rel="shortcut icon" type="image/x-icon" href="/media/logo.png" />
   <link rel="stylesheet" href="output.css">
-  <meta name="title" content="KrapkaSoft official website">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Hey! Welcome to the official KrapkaSoft website! Here you can look through our projects, contact us, and other. Enjoy :]" />
-  <meta property="og:site_name" content="KrapkaSoft">
-  <meta property="og:title" content="KrapkaSoft">
-  <title>KrapkaSoft</title>
+    content="Offical KrapkaSoft indie development studio website page. We create unique and innovative games that are enjoyed by gamers all over the world" />
 </head>
 
 <header>
@@ -32,7 +31,7 @@
   </div>
 </header>
   
-<body>
+<body class="overflow-hidden">
   <div class="bg-gradient-animated">
   <div class="loader-wrapper">
     <div class="ring">
