--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <meta name="title" content="404">
+    <meta name="title" content="Maintenance">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -12,20 +12,13 @@
         body {
             background-color: black;
             font-family: "Edit Undo BRK", sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-
-        @keyframes blink {
-            0% {
-                text-shadow: red 0px 0px 30px;
-            }
-
-            50% {
-                text-shadow: none;
-            }
-
-            100% {
-                text-shadow: red 0px 0px 30px;
-            }
+        h1 {
+            position: relative;
+            text-shadow: red 0px 0px 30px;
         }
 
         h2 {
@@ -37,7 +30,7 @@
             font-size: 20px;
         }
     </style>
-    <h1 style="color: white; font-size: 100px; text-align: center; margin-top: 18%; animation: blink 1s infinite;;">
-        Error 404</h1>
-    <h2>Website is not ready yet. Please, Check this page later</h2>
+    <h1 style="color: white; font-size: 50px; text-align: center; margin-top: 18%; animation: blink 1s infinite;;">
+        Website is on maintenance</h1>
+    <h2>Please, check this page later</h2>
 </body>
