--- a/aboutus.html
+++ b/aboutus.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>News</title>
-    <link rel="stylesheet" href="stylesheets/news.css">
+    <title>About us</title>
+    <link rel="stylesheet" href="stylesheets/aboutus.css">
     <link rel="stylesheet" href="stylesheets/output.css">
-    <script src="js/news.js"></script>
+    <script src="js/aboutus.js"></script>
     <script src="js/loader.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
 </div>
 
     <div class="title">
-        <h1>News</h1>
+        <h1>About us</h1>
     </div>
 
 </body>
