--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>KrapkaSoft: Indie Development Studio</title>
 
   <link rel="stylesheet" href="buttons.scss">
-  <script src="script.js"></script>
+  <script src="/js/script.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <link rel="shortcut icon" type="image/x-icon" href="/media/logo.png" />
-  <link rel="stylesheet" href="output.css">
-  
+  <link rel="stylesheet" href="/stylesheets/output.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Offical KrapkaSoft indie development studio website page. We create unique and innovative games that are enjoyed by gamers all over the world" />
@@ -22,135 +22,144 @@
     </div>
     <nav>
       <ul>
-        <li><a href="404.html" ;">about us</a></li>
-        <li><a href="/news.html" ;">news</a></li>
-        <li><a href="404.html" ;">socials</a></li>
+        <li><a href="/404.html" ;">about us</a></li>
+        <li><a href="/404.html" ;">news</a></li>
+        <li><a href="/404.html" ;">socials</a></li>
         <li><a href="mailto:leapingcatgame@gmail.com">contact us</a></li>
       </ul>
     </nav>
   </div>
 </header>
-  
+
+<script src="/js/loader.js"></script>
+
 <body class="overflow-hidden">
   <div class="bg-gradient-animated">
-  <div class="loader-wrapper">
-    <div class="ring">
+    <div class="loader-wrapper">
+      <div class="ring">
         <svg viewBox="25 25 50 50">
-            <circle cx="50" cy="50" r="20"></circle>
+          <circle cx="50" cy="50" r="20"></circle>
         </svg>
+      </div>
     </div>
-</div>
-<script src="loader.js"></script>
-<div class="bg-gradient-to-tr from-[#303030] to-[#303030]">
-  <div class="relative isolate px-6 pt-14 lg:px-8">
-    <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
-      <div class="hidden sm:mb-8 sm:flex sm:justify-center">
-        <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-300 ring-1 ring-indigo hover:ring-/20">
-          New game just got announced <a href="404.html" class="font-semibold text-indigo-600"><span
-              class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+
+    <div class="bg-gradient-to-tr from-[#303030] to-[#303030]">
+      <div class="relative isolate px-6 pt-14 lg:px-8">
+        <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+          <div class="hidden sm:mb-8 sm:flex sm:justify-center">
+            <div
+              class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-300 ring-1 ring-indigo hover:ring-/20">
+              New game just got announced <a href="404.html" class="font-semibold text-indigo-600"><span
+                  class="absolute inset-0" aria-hidden="true"></span>Read more <span
+                  aria-hidden="true">&rarr;</span></a>
+            </div>
+          </div>
+          <div class="text-center">
+            <h1 class="text-4xl tracking-tight text-white sm:text-8xl">KRAPKASOFt</h1>
+            <p class="mt-6 text-lg leading-8 text-gray-400">Welcome to the official website of krapkasoft indie gamedev
+              studio</p>
+          </div>
+        </div>
+        <div
+          class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
+          aria-hidden="true">
+          <div
+            class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
+            style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
+          </div>
         </div>
       </div>
-      <div class="text-center">
-        <h1 class="text-4xl tracking-tight text-white sm:text-8xl">KRAPKASOFt</h1>
-        <p class="mt-6 text-lg leading-8 text-gray-400">Welcome to the official website of krapkasoft indie gamedev
-          studio</p>
-      </div>
     </div>
-    <div
-      class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
-      aria-hidden="true">
-      <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
-      </div>
-    </div>
-  </div>
-</div>
-<div class="reveal">
-  <div class="overlay">
-    <h2 class="text-4xl tracking-tight text-white sm:text-7xl mx-auto" style="margin-top: 400px; margin-bottom: 200px;">
-      our products</h2>
-  </div>
-</div>
-<div class="reveal">
-  <div class="axerimg">
-    <img src="/media/axer.png" style="" alt="axer">
-    </div>
-  <iframe width="60%" height="600"
-    src="https://www.youtube.com/embed/33fP-hAH6iM" title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen>
-  </iframe>
-  <div class="reveal">
-    <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
-      <div
-        class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
-        style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
-      </div>
-    </div>
-  </div>
-</div>
-<div class="reveal">
-  <div class="divbutton">
-    <button role="button"
-      onclick="window.location.href='https://play.google.com/store/apps/details?id=com.krapkasoft.leapingcatsm';">
-      Leaping Cat 2 - Smooth Dark on Google Play
-    </button>
-  </div>
-</div>
-<div class="reveal">
-  <div class="iframe-container">
-  <iframe class="iframe_Mike"
-    src="https://www.youtube.com/embed/yFN0cLgM_Rk?controls=0" title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen></iframe>
-  </div>
-</div>
-<div class="reveal">
-  <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
-    <div
-      class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
-      style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
-    </div>
-  </div>
-  <div class="divbutton">
-    <button role="button"
-      onclick="window.location.href='https://play.google.com/store/apps/details?id=com.leapingcat';">
-      Leaping Cat on Google Play
-    </button>
-  </div>
-</div>
-</div>
-<div class="reveal">
-  <div id="video">
-    <h1 class="relative tracking-tight text-white text-center"
-      style="font-size: 60px;  margin-top: 500px; color : orange; text-shadow: orangered 0px 0px 15px; animation: blink 3s infinite;">
-      Flami
-    </h1>
-    <p class="mt-6 text-lg leading-8 text-gray-200 text-center">coming soon to pc and ps 5</p>
     <div class="reveal">
-      <video style="
+      <div class="overlay">
+        <h2 class="text-4xl tracking-tight text-white sm:text-7xl mx-auto"
+          style="margin-top: 400px; margin-bottom: 200px;">
+          our products</h2>
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="axerimg">
+        <img src="/media/axer.png" style="" alt="axer">
+      </div>
+      <iframe width="60%" height="600" src="https://www.youtube.com/embed/33fP-hAH6iM" title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+      <div class="reveal">
+        <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+          aria-hidden="true">
+          <div
+            class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
+            style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="divbutton">
+        <button role="button"
+          onclick="window.location.href='https://play.google.com/store/apps/details?id=com.krapkasoft.leapingcatsm';">
+          Leaping Cat 2 - Smooth Dark on Google Play
+        </button>
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="iframe-container">
+        <iframe class="iframe_Mike" src="https://www.youtube.com/embed/yFN0cLgM_Rk?controls=0"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+        aria-hidden="true">
+        <div
+          class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
+          style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
+        </div>
+      </div>
+      <div class="divbutton">
+        <button role="button"
+          onclick="window.location.href='https://play.google.com/store/apps/details?id=com.leapingcat';">
+          Leaping Cat on Google Play
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="reveal">
+    <div id="video">
+      <h1 class="relative tracking-tight text-white text-center"
+        style="font-size: 60px;  margin-top: 500px; color : orange; text-shadow: orangered 0px 0px 15px; animation: blink 3s infinite;">
+        Flami
+      </h1>
+      <p class="mt-6 text-lg leading-8 text-gray-200 text-center">coming soon to pc and ps 5</p>
+      <div class="reveal">
+        <video style="
     display: block;
     margin: auto;" src="/media/flami.webm" height="100" width="auto" autoplay loop muted></video>
+      </div>
     </div>
   </div>
-</div>
 
-<section id="footer">
-  <div class="logo-garden ">
-    <img alt="UE" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
-      class="ueimg" src="media/UE_Logo_stacked_unreal-engine_white.svg">
-    <img alt="Unity" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
-      class="unityimg" src="media/U_Logo_White_RGB.svg">
-    <img alt="PC" class="pc" src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg">
+  <section id="footer">
+    <div class="logo-garden ">
+      <img alt="UE" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
+        class="ueimg" src="media/UE_Logo_stacked_unreal-engine_white.svg">
+      <img alt="Unity" data-src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg"
+        class="unityimg" src="media/U_Logo_White_RGB.svg">
+      <img alt="PC" class="pc" src="https://cdn-hogwartslegacy.warnerbrosgames.com/static/pc-digital-download-logo.svg">
+    </div>
+  </section>
+
+  <div class="legal">
+    <p>
+      Leaping Cat, Leaping Cat 2 : Smooth Dark and Flami software © 2023 KrapkaSoft. Leaping Cat, Leaping Cat 2 : Smooth
+      Dark and Flami
+      characters, names and related indicia © and ™ KrapkaSoft. All Rights Reserved.
+    </p>
   </div>
-</section>
-
-<div class="legal">
-  <p>
-    Leaping Cat, Leaping Cat 2 : Smooth Dark and Flami software © 2023 KrapkaSoft. Leaping Cat, Leaping Cat 2 : Smooth
-    Dark and Flami
-    characters, names and related indicia © and ™ KrapkaSoft. All Rights Reserved.
-  </p>
-</div>
 </body>
 
 </html>
