--- a/socials.html
+++ b/socials.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>News</title>
-    <link rel="stylesheet" href="stylesheets/news.css">
-    <link rel="stylesheet" href="stylesheets/output.css">
-    <script src="js/news.js"></script>
-    <script src="js/loader.js"></script>
+    <title>Socials</title>
+    <link rel="stylesheet" href="/stylesheets/socials.css">
+    <script src="/js/loader.js"></script>
 </head>
 <body>
 
@@ -19,7 +17,7 @@
 </div>
 
     <div class="title">
-        <h1>News</h1>
+        <a>Socials</a>
     </div>
 
 </body>
