--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Offical KrapkaSoft indie development studio website page. We create unique and innovative games that are enjoyed by gamers all over the world" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-290634145-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-290634145-1');
+</script>
 </head>
 
 <header>
